Code/Network Policies/13/NetworkPolicy_2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: dbserver-dev
  policyTypes: 
  - Ingress 
  ingress:
  - from:  
    - podSelector:
        matchLabels:
          app: webserver-dev
    ports:
    - protocol: TCP 
      port: 80
